hw2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    MULTI_COMMENT
    SING_COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> stress
Rule 2     stress -> class_decl stress
Rule 3     stress -> empty
Rule 4     class_decl -> CLASS ID EXTENDS ID { class_body_decl }
Rule 5     class_decl -> CLASS ID { class_body_decl }
Rule 6     class_body_decl -> field_decl
Rule 7     class_body_decl -> method_decl
Rule 8     class_body_decl -> constructor_decl
Rule 9     class_body_decl -> class_body_decl field_decl
Rule 10    class_body_decl -> class_body_decl method_decl
Rule 11    class_body_decl -> class_body_decl constructor_decl
Rule 12    field_decl -> modifier var_decl
Rule 13    modifier -> PUBLIC STATIC
Rule 14    modifier -> PUBLIC
Rule 15    modifier -> PRIVATE STATIC
Rule 16    modifier -> PRIVATE
Rule 17    modifier -> STATIC
Rule 18    modifier -> empty
Rule 19    var_decl -> type variables ;
Rule 20    type -> INT
Rule 21    type -> FLOAT
Rule 22    type -> BOOLEAN
Rule 23    type -> ID
Rule 24    variables -> variable temp_3
Rule 25    temp_3 -> , variable temp_3
Rule 26    temp_3 -> empty
Rule 27    variable -> ID
Rule 28    method_decl -> modifier type ID LEFTPAREN formals RIGHTPAREN block
Rule 29    method_decl -> modifier VOID ID LEFTPAREN formals RIGHTPAREN block
Rule 30    constructor_decl -> modifier ID LEFTPAREN formals RIGHTPAREN block
Rule 31    formals -> formal_param temp_6
Rule 32    formals -> empty
Rule 33    temp_6 -> , formal_param temp_6
Rule 34    temp_6 -> empty
Rule 35    formal_param -> type variable
Rule 36    block -> { temp_7 }
Rule 37    temp_7 -> stmt temp_7
Rule 38    temp_7 -> empty
Rule 39    stmt -> open_stmt
Rule 40    stmt -> close_stmt
Rule 41    open_stmt -> IF LEFTPAREN expr RIGHTPAREN stmt
Rule 42    open_stmt -> IF LEFTPAREN expr RIGHTPAREN close_stmt ELSE open_stmt
Rule 43    open_stmt -> WHILE LEFTPAREN expr RIGHTPAREN open_stmt
Rule 44    open_stmt -> FOR LEFTPAREN temp_8 ; temp_9 ; temp_8 RIGHTPAREN open_stmt
Rule 45    close_stmt -> RETURN temp_9 ;
Rule 46    close_stmt -> stmt_expr ;
Rule 47    close_stmt -> BREAK ;
Rule 48    close_stmt -> CONTINUE ;
Rule 49    close_stmt -> var_decl
Rule 50    close_stmt -> ;
Rule 51    close_stmt -> block
Rule 52    close_stmt -> IF LEFTPAREN expr RIGHTPAREN close_stmt ELSE close_stmt
Rule 53    close_stmt -> WHILE LEFTPAREN expr RIGHTPAREN close_stmt
Rule 54    close_stmt -> FOR LEFTPAREN temp_8 ; temp_9 ; temp_8 RIGHTPAREN close_stmt
Rule 55    temp_8 -> stmt_expr
Rule 56    temp_8 -> empty
Rule 57    temp_9 -> expr
Rule 58    temp_9 -> empty
Rule 59    stmt_expr -> assign
Rule 60    stmt_expr -> method_invocation
Rule 61    literal -> INT_CONST
Rule 62    literal -> FLOAT_CONST
Rule 63    literal -> STRING_CONST
Rule 64    literal -> NULL
Rule 65    literal -> TRUE
Rule 66    literal -> FALSE
Rule 67    primary -> literal
Rule 68    primary -> THIS
Rule 69    primary -> SUPER
Rule 70    primary -> LEFTPAREN expr RIGHTPAREN
Rule 71    primary -> NEW ID LEFTPAREN test_1 RIGHTPAREN
Rule 72    primary -> lhs
Rule 73    primary -> method_invocation
Rule 74    test_1 -> expr test_2
Rule 75    test_1 -> empty
Rule 76    test_2 -> , expr test_2
Rule 77    test_2 -> empty
Rule 78    lhs -> field_access
Rule 79    field_access -> primary . ID
Rule 80    field_access -> ID
Rule 81    method_invocation -> field_access LEFTPAREN test_1 RIGHTPAREN
Rule 82    expr -> primary
Rule 83    expr -> assign
Rule 84    expr -> arith_op
Rule 85    expr -> bool_op
Rule 86    expr -> unary_op
Rule 87    assign -> lhs = expr
Rule 88    assign -> lhs INCREMENT
Rule 89    assign -> INCREMENT lhs
Rule 90    assign -> lhs DECREMENT
Rule 91    assign -> DECREMENT lhs
Rule 92    arith_op -> expr PLUS expr
Rule 93    arith_op -> expr MINUS expr
Rule 94    arith_op -> expr MULTIPLY expr
Rule 95    arith_op -> expr DIVIDE expr
Rule 96    bool_op -> expr BOOL_AND expr
Rule 97    bool_op -> expr BOOL_OR expr
Rule 98    bool_op -> expr EQUALITY expr
Rule 99    bool_op -> expr DISQUALITY expr
Rule 100   bool_op -> expr LESSTHAN expr
Rule 101   bool_op -> expr GREATERTHAN expr
Rule 102   bool_op -> expr LEQ expr
Rule 103   bool_op -> expr GEQ expr
Rule 104   unary_op -> PLUS expr
Rule 105   unary_op -> MINUS expr
Rule 106   unary_op -> NOT expr
Rule 107   empty -> <empty>

Terminals, with rules where they appear

,                    : 25 33 76
.                    : 79
;                    : 19 44 44 45 46 47 48 50 54 54
=                    : 87
BOOLEAN              : 22
BOOL_AND             : 96
BOOL_OR              : 97
BREAK                : 47
CLASS                : 4 5
CONTINUE             : 48
DECREMENT            : 90 91
DISQUALITY           : 99
DIVIDE               : 95
DO                   : 
ELSE                 : 42 52
EQUALITY             : 98
EXTENDS              : 4
FALSE                : 66
FLOAT                : 21
FLOAT_CONST          : 62
FOR                  : 44 54
GEQ                  : 103
GREATERTHAN          : 101
ID                   : 4 4 5 23 27 28 29 30 71 79 80
IF                   : 41 42 52
INCREMENT            : 88 89
INT                  : 20
INT_CONST            : 61
LEFTPAREN            : 28 29 30 41 42 43 44 52 53 54 70 71 81
LEQ                  : 102
LESSTHAN             : 100
MINUS                : 93 105
MULTIPLY             : 94
MULTI_COMMENT        : 
NEW                  : 71
NOT                  : 106
NULL                 : 64
PLUS                 : 92 104
PRIVATE              : 15 16
PUBLIC               : 13 14
RETURN               : 45
RIGHTPAREN           : 28 29 30 41 42 43 44 52 53 54 70 71 81
SING_COMMENT         : 
STATIC               : 13 15 17
STRING_CONST         : 63
SUPER                : 69
THIS                 : 68
TRUE                 : 65
VOID                 : 29
WHILE                : 43 53
error                : 
{                    : 4 5 36
}                    : 4 5 36

Nonterminals, with rules where they appear

arith_op             : 84
assign               : 59 83
block                : 28 29 30 51
bool_op              : 85
class_body_decl      : 4 5 9 10 11
class_decl           : 2
close_stmt           : 40 42 52 52 53 54
constructor_decl     : 8 11
empty                : 3 18 26 32 34 38 56 58 75 77
expr                 : 41 42 43 52 53 57 70 74 76 87 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 105 106
field_access         : 78 81
field_decl           : 6 9
formal_param         : 31 33
formals              : 28 29 30
lhs                  : 72 87 88 89 90 91
literal              : 67
method_decl          : 7 10
method_invocation    : 60 73
modifier             : 12 28 29 30
open_stmt            : 39 42 43 44
primary              : 79 82
program              : 0
stmt                 : 37 41
stmt_expr            : 46 55
stress               : 1 2
temp_3               : 24 25
temp_6               : 31 33
temp_7               : 36 37
temp_8               : 44 44 54 54
temp_9               : 44 45 54
test_1               : 71 81
test_2               : 74 76
type                 : 19 28 35
unary_op             : 86
var_decl             : 12 49
variable             : 24 25 35
variables            : 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stress
    (2) stress -> . class_decl stress
    (3) stress -> . empty
    (4) class_decl -> . CLASS ID EXTENDS ID { class_body_decl }
    (5) class_decl -> . CLASS ID { class_body_decl }
    (107) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 107 (empty -> .)

    program                        shift and go to state 1
    stress                         shift and go to state 2
    class_decl                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> stress .

    $end            reduce using rule 1 (program -> stress .)


state 3

    (2) stress -> class_decl . stress
    (2) stress -> . class_decl stress
    (3) stress -> . empty
    (4) class_decl -> . CLASS ID EXTENDS ID { class_body_decl }
    (5) class_decl -> . CLASS ID { class_body_decl }
    (107) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 107 (empty -> .)

    class_decl                     shift and go to state 3
    stress                         shift and go to state 6
    empty                          shift and go to state 4

state 4

    (3) stress -> empty .

    $end            reduce using rule 3 (stress -> empty .)


state 5

    (4) class_decl -> CLASS . ID EXTENDS ID { class_body_decl }
    (5) class_decl -> CLASS . ID { class_body_decl }

    ID              shift and go to state 7


state 6

    (2) stress -> class_decl stress .

    $end            reduce using rule 2 (stress -> class_decl stress .)


state 7

    (4) class_decl -> CLASS ID . EXTENDS ID { class_body_decl }
    (5) class_decl -> CLASS ID . { class_body_decl }

    EXTENDS         shift and go to state 8
    {               shift and go to state 9


state 8

    (4) class_decl -> CLASS ID EXTENDS . ID { class_body_decl }

    ID              shift and go to state 10


state 9

    (5) class_decl -> CLASS ID { . class_body_decl }
    (6) class_body_decl -> . field_decl
    (7) class_body_decl -> . method_decl
    (8) class_body_decl -> . constructor_decl
    (9) class_body_decl -> . class_body_decl field_decl
    (10) class_body_decl -> . class_body_decl method_decl
    (11) class_body_decl -> . class_body_decl constructor_decl
    (12) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LEFTPAREN formals RIGHTPAREN block
    (29) method_decl -> . modifier VOID ID LEFTPAREN formals RIGHTPAREN block
    (30) constructor_decl -> . modifier ID LEFTPAREN formals RIGHTPAREN block
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . STATIC
    (18) modifier -> . empty
    (107) empty -> .

    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 107 (empty -> .)
    ID              reduce using rule 107 (empty -> .)
    INT             reduce using rule 107 (empty -> .)
    FLOAT           reduce using rule 107 (empty -> .)
    BOOLEAN         reduce using rule 107 (empty -> .)

    class_body_decl                shift and go to state 11
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 10

    (4) class_decl -> CLASS ID EXTENDS ID . { class_body_decl }

    {               shift and go to state 20


state 11

    (5) class_decl -> CLASS ID { class_body_decl . }
    (9) class_body_decl -> class_body_decl . field_decl
    (10) class_body_decl -> class_body_decl . method_decl
    (11) class_body_decl -> class_body_decl . constructor_decl
    (12) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LEFTPAREN formals RIGHTPAREN block
    (29) method_decl -> . modifier VOID ID LEFTPAREN formals RIGHTPAREN block
    (30) constructor_decl -> . modifier ID LEFTPAREN formals RIGHTPAREN block
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . STATIC
    (18) modifier -> . empty
    (107) empty -> .

    }               shift and go to state 21
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 107 (empty -> .)
    ID              reduce using rule 107 (empty -> .)
    INT             reduce using rule 107 (empty -> .)
    FLOAT           reduce using rule 107 (empty -> .)
    BOOLEAN         reduce using rule 107 (empty -> .)

    field_decl                     shift and go to state 22
    method_decl                    shift and go to state 23
    constructor_decl               shift and go to state 24
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 12

    (6) class_body_decl -> field_decl .

    }               reduce using rule 6 (class_body_decl -> field_decl .)
    PUBLIC          reduce using rule 6 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 6 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 6 (class_body_decl -> field_decl .)
    VOID            reduce using rule 6 (class_body_decl -> field_decl .)
    ID              reduce using rule 6 (class_body_decl -> field_decl .)
    INT             reduce using rule 6 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 6 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 6 (class_body_decl -> field_decl .)


state 13

    (7) class_body_decl -> method_decl .

    }               reduce using rule 7 (class_body_decl -> method_decl .)
    PUBLIC          reduce using rule 7 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 7 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 7 (class_body_decl -> method_decl .)
    VOID            reduce using rule 7 (class_body_decl -> method_decl .)
    ID              reduce using rule 7 (class_body_decl -> method_decl .)
    INT             reduce using rule 7 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 7 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 7 (class_body_decl -> method_decl .)


state 14

    (8) class_body_decl -> constructor_decl .

    }               reduce using rule 8 (class_body_decl -> constructor_decl .)
    PUBLIC          reduce using rule 8 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 8 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 8 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 8 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 8 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 8 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 8 (class_body_decl -> constructor_decl .)


state 15

    (12) field_decl -> modifier . var_decl
    (28) method_decl -> modifier . type ID LEFTPAREN formals RIGHTPAREN block
    (29) method_decl -> modifier . VOID ID LEFTPAREN formals RIGHTPAREN block
    (30) constructor_decl -> modifier . ID LEFTPAREN formals RIGHTPAREN block
    (19) var_decl -> . type variables ;
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . BOOLEAN
    (23) type -> . ID

    VOID            shift and go to state 28
    ID              shift and go to state 27
    INT             shift and go to state 29
    FLOAT           shift and go to state 30
    BOOLEAN         shift and go to state 31

    var_decl                       shift and go to state 25
    type                           shift and go to state 26

state 16

    (13) modifier -> PUBLIC . STATIC
    (14) modifier -> PUBLIC .

    STATIC          shift and go to state 32
    VOID            reduce using rule 14 (modifier -> PUBLIC .)
    ID              reduce using rule 14 (modifier -> PUBLIC .)
    INT             reduce using rule 14 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 14 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 14 (modifier -> PUBLIC .)


state 17

    (17) modifier -> STATIC .

    VOID            reduce using rule 17 (modifier -> STATIC .)
    ID              reduce using rule 17 (modifier -> STATIC .)
    INT             reduce using rule 17 (modifier -> STATIC .)
    FLOAT           reduce using rule 17 (modifier -> STATIC .)
    BOOLEAN         reduce using rule 17 (modifier -> STATIC .)


state 18

    (15) modifier -> PRIVATE . STATIC
    (16) modifier -> PRIVATE .

    STATIC          shift and go to state 33
    VOID            reduce using rule 16 (modifier -> PRIVATE .)
    ID              reduce using rule 16 (modifier -> PRIVATE .)
    INT             reduce using rule 16 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 16 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 16 (modifier -> PRIVATE .)


state 19

    (18) modifier -> empty .

    VOID            reduce using rule 18 (modifier -> empty .)
    ID              reduce using rule 18 (modifier -> empty .)
    INT             reduce using rule 18 (modifier -> empty .)
    FLOAT           reduce using rule 18 (modifier -> empty .)
    BOOLEAN         reduce using rule 18 (modifier -> empty .)


state 20

    (4) class_decl -> CLASS ID EXTENDS ID { . class_body_decl }
    (6) class_body_decl -> . field_decl
    (7) class_body_decl -> . method_decl
    (8) class_body_decl -> . constructor_decl
    (9) class_body_decl -> . class_body_decl field_decl
    (10) class_body_decl -> . class_body_decl method_decl
    (11) class_body_decl -> . class_body_decl constructor_decl
    (12) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LEFTPAREN formals RIGHTPAREN block
    (29) method_decl -> . modifier VOID ID LEFTPAREN formals RIGHTPAREN block
    (30) constructor_decl -> . modifier ID LEFTPAREN formals RIGHTPAREN block
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . STATIC
    (18) modifier -> . empty
    (107) empty -> .

    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 107 (empty -> .)
    ID              reduce using rule 107 (empty -> .)
    INT             reduce using rule 107 (empty -> .)
    FLOAT           reduce using rule 107 (empty -> .)
    BOOLEAN         reduce using rule 107 (empty -> .)

    class_body_decl                shift and go to state 34
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 21

    (5) class_decl -> CLASS ID { class_body_decl } .

    CLASS           reduce using rule 5 (class_decl -> CLASS ID { class_body_decl } .)
    $end            reduce using rule 5 (class_decl -> CLASS ID { class_body_decl } .)


state 22

    (9) class_body_decl -> class_body_decl field_decl .

    }               reduce using rule 9 (class_body_decl -> class_body_decl field_decl .)
    PUBLIC          reduce using rule 9 (class_body_decl -> class_body_decl field_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> class_body_decl field_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> class_body_decl field_decl .)
    VOID            reduce using rule 9 (class_body_decl -> class_body_decl field_decl .)
    ID              reduce using rule 9 (class_body_decl -> class_body_decl field_decl .)
    INT             reduce using rule 9 (class_body_decl -> class_body_decl field_decl .)
    FLOAT           reduce using rule 9 (class_body_decl -> class_body_decl field_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl -> class_body_decl field_decl .)


state 23

    (10) class_body_decl -> class_body_decl method_decl .

    }               reduce using rule 10 (class_body_decl -> class_body_decl method_decl .)
    PUBLIC          reduce using rule 10 (class_body_decl -> class_body_decl method_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl -> class_body_decl method_decl .)
    STATIC          reduce using rule 10 (class_body_decl -> class_body_decl method_decl .)
    VOID            reduce using rule 10 (class_body_decl -> class_body_decl method_decl .)
    ID              reduce using rule 10 (class_body_decl -> class_body_decl method_decl .)
    INT             reduce using rule 10 (class_body_decl -> class_body_decl method_decl .)
    FLOAT           reduce using rule 10 (class_body_decl -> class_body_decl method_decl .)
    BOOLEAN         reduce using rule 10 (class_body_decl -> class_body_decl method_decl .)


state 24

    (11) class_body_decl -> class_body_decl constructor_decl .

    }               reduce using rule 11 (class_body_decl -> class_body_decl constructor_decl .)
    PUBLIC          reduce using rule 11 (class_body_decl -> class_body_decl constructor_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl -> class_body_decl constructor_decl .)
    STATIC          reduce using rule 11 (class_body_decl -> class_body_decl constructor_decl .)
    VOID            reduce using rule 11 (class_body_decl -> class_body_decl constructor_decl .)
    ID              reduce using rule 11 (class_body_decl -> class_body_decl constructor_decl .)
    INT             reduce using rule 11 (class_body_decl -> class_body_decl constructor_decl .)
    FLOAT           reduce using rule 11 (class_body_decl -> class_body_decl constructor_decl .)
    BOOLEAN         reduce using rule 11 (class_body_decl -> class_body_decl constructor_decl .)


state 25

    (12) field_decl -> modifier var_decl .

    }               reduce using rule 12 (field_decl -> modifier var_decl .)
    PUBLIC          reduce using rule 12 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 12 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 12 (field_decl -> modifier var_decl .)
    VOID            reduce using rule 12 (field_decl -> modifier var_decl .)
    ID              reduce using rule 12 (field_decl -> modifier var_decl .)
    INT             reduce using rule 12 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 12 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 12 (field_decl -> modifier var_decl .)


state 26

    (28) method_decl -> modifier type . ID LEFTPAREN formals RIGHTPAREN block
    (19) var_decl -> type . variables ;
    (24) variables -> . variable temp_3
    (27) variable -> . ID

    ID              shift and go to state 35

    variables                      shift and go to state 36
    variable                       shift and go to state 37

state 27

    (30) constructor_decl -> modifier ID . LEFTPAREN formals RIGHTPAREN block
    (23) type -> ID .

    LEFTPAREN       shift and go to state 38
    ID              reduce using rule 23 (type -> ID .)


state 28

    (29) method_decl -> modifier VOID . ID LEFTPAREN formals RIGHTPAREN block

    ID              shift and go to state 39


state 29

    (20) type -> INT .

    ID              reduce using rule 20 (type -> INT .)


state 30

    (21) type -> FLOAT .

    ID              reduce using rule 21 (type -> FLOAT .)


state 31

    (22) type -> BOOLEAN .

    ID              reduce using rule 22 (type -> BOOLEAN .)


state 32

    (13) modifier -> PUBLIC STATIC .

    VOID            reduce using rule 13 (modifier -> PUBLIC STATIC .)
    ID              reduce using rule 13 (modifier -> PUBLIC STATIC .)
    INT             reduce using rule 13 (modifier -> PUBLIC STATIC .)
    FLOAT           reduce using rule 13 (modifier -> PUBLIC STATIC .)
    BOOLEAN         reduce using rule 13 (modifier -> PUBLIC STATIC .)


state 33

    (15) modifier -> PRIVATE STATIC .

    VOID            reduce using rule 15 (modifier -> PRIVATE STATIC .)
    ID              reduce using rule 15 (modifier -> PRIVATE STATIC .)
    INT             reduce using rule 15 (modifier -> PRIVATE STATIC .)
    FLOAT           reduce using rule 15 (modifier -> PRIVATE STATIC .)
    BOOLEAN         reduce using rule 15 (modifier -> PRIVATE STATIC .)


state 34

    (4) class_decl -> CLASS ID EXTENDS ID { class_body_decl . }
    (9) class_body_decl -> class_body_decl . field_decl
    (10) class_body_decl -> class_body_decl . method_decl
    (11) class_body_decl -> class_body_decl . constructor_decl
    (12) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LEFTPAREN formals RIGHTPAREN block
    (29) method_decl -> . modifier VOID ID LEFTPAREN formals RIGHTPAREN block
    (30) constructor_decl -> . modifier ID LEFTPAREN formals RIGHTPAREN block
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . STATIC
    (18) modifier -> . empty
    (107) empty -> .

    }               shift and go to state 40
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 107 (empty -> .)
    ID              reduce using rule 107 (empty -> .)
    INT             reduce using rule 107 (empty -> .)
    FLOAT           reduce using rule 107 (empty -> .)
    BOOLEAN         reduce using rule 107 (empty -> .)

    field_decl                     shift and go to state 22
    method_decl                    shift and go to state 23
    constructor_decl               shift and go to state 24
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 35

    (28) method_decl -> modifier type ID . LEFTPAREN formals RIGHTPAREN block
    (27) variable -> ID .

    LEFTPAREN       shift and go to state 41
    ,               reduce using rule 27 (variable -> ID .)
    ;               reduce using rule 27 (variable -> ID .)


state 36

    (19) var_decl -> type variables . ;

    ;               shift and go to state 42


state 37

    (24) variables -> variable . temp_3
    (25) temp_3 -> . , variable temp_3
    (26) temp_3 -> . empty
    (107) empty -> .

    ,               shift and go to state 44
    ;               reduce using rule 107 (empty -> .)

    temp_3                         shift and go to state 43
    empty                          shift and go to state 45

state 38

    (30) constructor_decl -> modifier ID LEFTPAREN . formals RIGHTPAREN block
    (31) formals -> . formal_param temp_6
    (32) formals -> . empty
    (35) formal_param -> . type variable
    (107) empty -> .
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . BOOLEAN
    (23) type -> . ID

    RIGHTPAREN      reduce using rule 107 (empty -> .)
    INT             shift and go to state 29
    FLOAT           shift and go to state 30
    BOOLEAN         shift and go to state 31
    ID              shift and go to state 46

    formals                        shift and go to state 47
    formal_param                   shift and go to state 48
    empty                          shift and go to state 49
    type                           shift and go to state 50

state 39

    (29) method_decl -> modifier VOID ID . LEFTPAREN formals RIGHTPAREN block

    LEFTPAREN       shift and go to state 51


state 40

    (4) class_decl -> CLASS ID EXTENDS ID { class_body_decl } .

    CLASS           reduce using rule 4 (class_decl -> CLASS ID EXTENDS ID { class_body_decl } .)
    $end            reduce using rule 4 (class_decl -> CLASS ID EXTENDS ID { class_body_decl } .)


state 41

    (28) method_decl -> modifier type ID LEFTPAREN . formals RIGHTPAREN block
    (31) formals -> . formal_param temp_6
    (32) formals -> . empty
    (35) formal_param -> . type variable
    (107) empty -> .
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . BOOLEAN
    (23) type -> . ID

    RIGHTPAREN      reduce using rule 107 (empty -> .)
    INT             shift and go to state 29
    FLOAT           shift and go to state 30
    BOOLEAN         shift and go to state 31
    ID              shift and go to state 46

    type                           shift and go to state 50
    formals                        shift and go to state 52
    formal_param                   shift and go to state 48
    empty                          shift and go to state 49

state 42

    (19) var_decl -> type variables ; .
